docs/v3.8.5/_sources/gallery/single/index.rst.txt
:orphan:

.. _single_index:

Single Module
=============

The ``single`` package focuses on scattering from a single particle.  It exposes
simple classes for defining a source, a scatterer and a detector so that the
interaction can be studied in detail.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the process of computing and visualizing the far-fields of a scatterer using PyMieSim.">

.. only:: html

  .. image:: /gallery/single/images/thumb/sphx_glr_farfield_thumb.png
    :alt:

  :doc:`/gallery/single/farfield`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Far-Fields Computation and Visualization</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to compute and visualize the footprint of a scatterer using PyMieSim.">

.. only:: html

  .. image:: /gallery/single/images/thumb/sphx_glr_footprint_thumb.png
    :alt:

  :doc:`/gallery/single/footprint`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Scatterer Footprint Calculation and Visualization</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the process of computing and visualizing the far-fields of a scatterer using PyMieSim.">

.. only:: html

  .. image:: /gallery/single/images/thumb/sphx_glr_nearfield_thumb.png
    :alt:

  :doc:`/gallery/single/nearfield`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Near-Fields Computation and Visualization</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to compute and visualize the S1 and S2 scattering functions using PyMieSim.">

.. only:: html

  .. image:: /gallery/single/images/thumb/sphx_glr_s1s2_thumb.png
    :alt:

  :doc:`/gallery/single/s1s2`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">S1 S2 Function Computation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to visualize the properties of a light source using PyMieSim.">

.. only:: html

  .. image:: /gallery/single/images/thumb/sphx_glr_source_thumb.png
    :alt:

  :doc:`/gallery/single/source`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Source Plottings</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the computation and visualization of the Scattering Phase Function (SPF) using PyMieSim.">

.. only:: html

  .. image:: /gallery/single/images/thumb/sphx_glr_spf_thumb.png
    :alt:

  :doc:`/gallery/single/spf`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">SPF Computation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the computation and visualization of the Stokes parameters using PyMieSim.">

.. only:: html

  .. image:: /gallery/single/images/thumb/sphx_glr_stokes_thumb.png
    :alt:

  :doc:`/gallery/single/stokes`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Stokes Parameters Computation</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/single/farfield
   /gallery/single/footprint
   /gallery/single/nearfield
   /gallery/single/s1s2
   /gallery/single/source
   /gallery/single/spf
   /gallery/single/stokes



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
